<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012-2014 The CyanogenMod Project
     Copyright (C) 2018 TeamNexus

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

	<string name="app_name">Power and performance settings</string>
	<string name="app_summary">Adjust the power management and performance behaviour</string>

	<string name="category_general">General</string>
	<string name="profiles_title">Enable dynamic performance profiles</string>
	<string name="profiles_summary">Adjusts the performance on either the users request or the device current power-state</string>
	<string name="profiles_automated_title">Use automatic performance profiles</string>
	<string name="profiles_automated_summary">Allows the system to modify the current performance profile depending on the current situation</string>
	<string name="profiles_dozing_title">Use adjusted performance profiles in dozing-mode</string>
	<string name="profiles_dozing_summary">Switches to an adjusted performance profile when switching to doze (ambient/always-on-display)</string>
	<string name="boost_interaction_title">Boost device on user-interaction</string>
	<string name="boost_interaction_summary">Allows the power-management to boost your device on user-interaction</string>
	<string name="boost_cpu_title">Boost device on system-request</string>
	<string name="boost_cpu_summary">Allows the power-management to dynamically boost your device when on request</string>
	<string name="fingerprint_always_on_title">Enable always-on-fingerprint</string>
	<string name="fingerprint_always_on_summary">Allows you to unlock the device using the fingerprint-sensor even when the screen if off</string>
	<string name="fingerprint_wakelocks_title">Use wakelocks for always-on-fingerprint</string>
	<string name="fingerprint_wakelocks_summary">Enables wakelocks to keep always-on-fingerprint alive when device goes into sleep</string>

	<string name="category_profiles">Tuning performance profiles</string>
	<string name="profiles_cluster0_title">Allow to adjust Apollo CPU-cluster</string>
	<string name="profiles_cluster0_summary">Adjust frequencies and cpugov-parameters for the Apollo-cluster</string>
	<string name="profiles_cluster1_title">Allow to adjust Atlas CPU-cluster</string>
	<string name="profiles_cluster1_summary">Allow to adjust frequencies and cpugov-parameters for the Atlas-cluster</string>
	<string name="profiles_hmp_title">Adjust HMP-parameters</string>
	<string name="profiles_hmp_summary">Allow to adjust the HMP task scheduler</string>
	<string name="profiles_gpu_title">Adjust GPU-parameters</string>
	<string name="profiles_gpu_summary">Allow to adjust GPU clock-parameters</string>
	<string name="profiles_input_title">Adjust input-parameters</string>
	<string name="profiles_input_summary">Allow to configure input-performance related stuff</string>
	<string name="profiles_thermal_title">Adjust thermal-parameters</string>
	<string name="profiles_thermal_summary">Allow to configure thermal limits for better performance under heavy load</string>
	<string name="profiles_kernel_title">Adjust kernel-parameters</string>
	<string name="profiles_kernel_summary">Allow to configure other kernel-related options</string>

</resources>
