<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
	        android:title="@string/category_general">

		<SwitchPreference
		    android:key="profiles"
		    android:title="@string/profiles_title" 
		    android:summary="@string/profiles_summary" />

		<SwitchPreference
		    android:key="profiles_automated"
		    android:title="@string/profiles_automated_title" 
		    android:summary="@string/profiles_automated_summary" />

		<SwitchPreference
		    android:key="profiles_dozing"
		    android:title="@string/profiles_dozing_title" 
		    android:summary="@string/profiles_dozing_summary" />

		<SwitchPreference
		    android:key="boost_interaction"
		    android:title="@string/boost_interaction_title" 
		    android:summary="@string/boost_interaction_summary" />

		<SwitchPreference
		    android:key="boost_cpu"
		    android:title="@string/boost_cpu_title" 
		    android:summary="@string/boost_cpu_summary" />

		<SwitchPreference
		    android:key="fingerprint_always_on"
		    android:title="@string/fingerprint_always_on_title"
		    android:summary="@string/fingerprint_always_on_summary" />

		<SwitchPreference
		    android:key="fingerprint_wakelocks"
		    android:title="@string/fingerprint_wakelocks_title"
		    android:summary="@string/fingerprint_wakelocks_summary" />

	</PreferenceCategory>

	<PreferenceCategory
	        android:title="@string/category_profiles">

		<SwitchPreference
		    android:key="profiles_cluster0"
		    android:title="@string/profiles_cluster0_title" 
		    android:summary="@string/profiles_cluster0_summary" />

		<SwitchPreference
		    android:key="profiles_cluster1"
		    android:title="@string/profiles_cluster1_title" 
		    android:summary="@string/profiles_cluster1_summary" />

		<SwitchPreference
		    android:key="profiles_hmp"
		    android:title="@string/profiles_hmp_title" 
		    android:summary="@string/profiles_hmp_summary" />

		<SwitchPreference
		    android:key="profiles_gpu"
		    android:title="@string/profiles_gpu_title" 
		    android:summary="@string/profiles_gpu_summary" />

		<SwitchPreference
		    android:key="profiles_input"
		    android:title="@string/profiles_input_title" 
		    android:summary="@string/profiles_input_summary" />

		<SwitchPreference
		    android:key="profiles_thermal"
		    android:title="@string/profiles_thermal_title" 
		    android:summary="@string/profiles_thermal_summary" />

		<SwitchPreference
		    android:key="profiles_kernel"
		    android:title="@string/profiles_kernel_title" 
		    android:summary="@string/profiles_kernel_summary" />

	</PreferenceCategory>

</PreferenceScreen>
